# gooroom-showdesktop-applet

./: Makefile.am  README  autogen.sh  configure.ac
data/: Makefile.am  kr.gooroom.ShowDesktopApplet.panel-applet.in.in
debian/: changelog  control  copyright  rules
icons/scalable/places/: Makefile.am
po/: POTFILES.in  POTFILES.skip  en_GB.po  ko.po
src/: Makefile.am  gooroom-showdesktop-applet.c  gooroom-showdesktop-applet.h  gooroom-showdesktop-module.c  showdesktop-applet-module.c  showdesktop-applet.c  showdesktop-applet.h
