SUBDIRS =	\
	data \
	src \
	po

ACLOCAL_AMFLAGS = -I m4 ${ACLOCAL_FLAGS}

EXTRA_DIST =	\
	intltool-extract.in	\
	intltool-merge.in	\
	intltool-update.in

DISTCLEANFILES =	\
	intltool-extract	\
	intltool-merge	\
	intltool-update	\
	./po/.intltool-merge-cache

MAINTAINERCLEANFILES = \
	*~ \
	intltool-*.in \
	compile \
	configure \
	INSTALL \
	install-sh \
	missing \
	mkinstalldirs \
	config.guess \
	ltmain.sh \
	config.sub \
	depcomp \
	Makefile.in \
	config.h.* \
	aclocal.m4 \
	acinclude.m4
